Se organiza el menu de notificaciones, se fija el header y se le pone background

--- a/index.html
+++ b/index.html
@@ -193,95 +193,97 @@
                 <p>YouTube para Artistas</p>
             </a>
         </div>
-        <!-- <div class="menu-notifications">
+        <div class="menu-notifications">
             <div class="bar-notification">
                 <p>Notificaciones</p>
                 <a href="" class="config">
                     <i class="button-config icon-cog"></i>
                 </a>
             </div>
-            <a href="" class="notification">
-                <img src="" alt="" class="image-profile">
-                <div class="content-notification">
-                    <p class="title-notification">Don't Start Now</p>
-                    <p>hace 1 día</p>
-                </div>
-                <img src="" alt="" class="image-content">
-                <i class="more-options-notification icon-more-vertical"></i>
-            </a>
-            <a href="" class="notification">
-                <img src="" alt="" class="image-profile">
-                <div class="content-notification">
-                    <p class="title-notification">Don't Start Now</p>
-                    <p>hace 1 día</p>
-                </div>
-                <img src="" alt="" class="image-content">
-                <i class="more-options-notification icon-more-vertical"></i>
-            </a>
-            <a href="" class="notification">
-                <img src="" alt="" class="image-profile">
-                <div class="content-notification">
-                    <p class="title-notification">Don't Start Now</p>
-                    <p>hace 1 día</p>
-                </div>
-                <img src="" alt="" class="image-content">
-                <i class="more-options-notification icon-more-vertical"></i>
-            </a>
-            <a href="" class="notification">
-                <img src="" alt="" class="image-profile">
-                <div class="content-notification">
-                    <p class="title-notification">Don't Start Now</p>
-                    <p>hace 1 día</p>
-                </div>
-                <img src="" alt="" class="image-content">
-                <i class="more-options-notification icon-more-vertical"></i>
-            </a>
-            <a href="" class="notification">
-                <img src="" alt="" class="image-profile">
-                <div class="content-notification">
-                    <p class="title-notification">Don't Start Now</p>
-                    <p>hace 1 día</p>
-                </div>
-                <img src="" alt="" class="image-content">
-                <i class="more-options-notification icon-more-vertical"></i>
-            </a>
-            <a href="" class="notification">
-                <img src="" alt="" class="image-profile">
-                <div class="content-notification">
-                    <p class="title-notification">Don't Start Now</p>
-                    <p>hace 1 día</p>
-                </div>
-                <img src="" alt="" class="image-content">
-                <i class="more-options-notification icon-more-vertical"></i>
-            </a>
-            <a href="" class="notification">
-                <img src="" alt="" class="image-profile">
-                <div class="content-notification">
-                    <p class="title-notification">Don't Start Now</p>
-                    <p>hace 1 día</p>
-                </div>
-                <img src="" alt="" class="image-content">
-                <i class="more-options-notification icon-more-vertical"></i>
-            </a>
-            <a href="" class="notification">
-                <img src="" alt="" class="image-profile">
-                <div class="content-notification">
-                    <p class="title-notification">Don't Start Now</p>
-                    <p>hace 1 día</p>
-                </div>
-                <img src="" alt="" class="image-content">
-                <i class="more-options-notification icon-more-vertical"></i>
-            </a>
-            <a href="" class="notification">
-                <img src="" alt="" class="image-profile">
-                <div class="content-notification">
-                    <p class="title-notification">Don't Start Now</p>
-                    <p>hace 1 día</p>
-                </div>
-                <img src="" alt="" class="image-content">
-                <i class="more-options-notification icon-more-vertical"></i>
-            </a>
-        </div> -->
+            <div class="notifications">
+                <a href="" class="notification">
+                    <img src="images/image-profile.png" alt="" class="image-profile">
+                    <div class="content-notification">
+                        <p class="title-notification">Don't Start Now</p>
+                        <p class="time-notification">hace 1 día</p>
+                    </div>
+                    <img src="images/image-content.png" alt="" class="image-content">
+                    <i class="more-options-notification icon-more-vertical"></i>
+                </a>
+                <a href="" class="notification">
+                    <img src="images/image-profile.png" alt="" class="image-profile">
+                    <div class="content-notification">
+                        <p class="title-notification">Don't Start Now</p>
+                        <p class="time-notification">hace 1 día</p>
+                    </div>
+                    <img src="images/image-content.png" alt="" class="image-content">
+                    <i class="more-options-notification icon-more-vertical"></i>
+                </a>
+                <a href="" class="notification">
+                    <img src="images/image-profile.png" alt="" class="image-profile">
+                    <div class="content-notification">
+                        <p class="title-notification">Don't Start Now</p>
+                        <p class="time-notification">hace 1 día</p>
+                    </div>
+                    <img src="images/image-content.png" alt="" class="image-content">
+                    <i class="more-options-notification icon-more-vertical"></i>
+                </a>
+                <a href="" class="notification">
+                    <img src="images/image-profile.png" alt="" class="image-profile">
+                    <div class="content-notification">
+                        <p class="title-notification">Don't Start Now</p>
+                        <p class="time-notification">hace 1 día</p>
+                    </div>
+                    <img src="images/image-content.png" alt="" class="image-content">
+                    <i class="more-options-notification icon-more-vertical"></i>
+                </a>
+                <a href="" class="notification">
+                    <img src="images/image-profile.png" alt="" class="image-profile">
+                    <div class="content-notification">
+                        <p class="title-notification">Don't Start Now</p>
+                        <p class="time-notification">hace 1 día</p>
+                    </div>
+                    <img src="images/image-content.png" alt="" class="image-content">
+                    <i class="more-options-notification icon-more-vertical"></i>
+                </a>
+                <a href="" class="notification">
+                    <img src="images/image-profile.png" alt="" class="image-profile">
+                    <div class="content-notification">
+                        <p class="title-notification">Don't Start Now</p>
+                        <p class="time-notification">hace 1 día</p>
+                    </div>
+                    <img src="images/image-content.png" alt="" class="image-content">
+                    <i class="more-options-notification icon-more-vertical"></i>
+                </a>
+                <a href="" class="notification">
+                    <img src="images/image-profile.png" alt="" class="image-profile">
+                    <div class="content-notification">
+                        <p class="title-notification">Don't Start Now</p>
+                        <p class="time-notification">hace 1 día</p>
+                    </div>
+                    <img src="images/image-content.png" alt="" class="image-content">
+                    <i class="more-options-notification icon-more-vertical"></i>
+                </a>
+                <a href="" class="notification">
+                    <img src="images/image-profile.png" alt="" class="image-profile">
+                    <div class="content-notification">
+                        <p class="title-notification">Don't Start Now</p>
+                        <p class="time-notification">hace 1 día</p>
+                    </div>
+                    <img src="images/image-content.png" alt="" class="image-content">
+                    <i class="more-options-notification icon-more-vertical"></i>
+                </a>
+                <a href="" class="notification">
+                    <img src="images/image-profile.png" alt="" class="image-profile">
+                    <div class="content-notification">
+                        <p class="title-notification">Don't Start Now</p>
+                        <p class="time-notification">hace 1 día</p>
+                    </div>
+                    <img src="images/image-content.png" alt="" class="image-content">
+                    <i class="more-options-notification icon-more-vertical"></i>
+                </a>
+            </div>
+        </div>
         <!-- <div class="menu-more-options-notification">
             <i class="ocultar icon-stack"></i>
             <p>Ocultar esta notificación</p>
