Se quita repeticiones de video y se agrega repeticiones de mix

--- a/index.html
+++ b/index.html
@@ -493,140 +493,44 @@
                     </div>
                     <i class="more-options-content icon-more-vertical"></i>
                 </div>
-                <div class="container-content">
-                    <div class="container-image-content">
-                        <img src="images/content-image.jpg" alt="" class="image-content">
-                        <p class="duration">1:01:14</p>
-                        <div class="ver-mas-tarde">
-                            <p>ver más tarde</p>
-                            <i class="icon-ver-mas-tarde icon-clock2"></i>
-                        </div>
-                        <div class="agregar-lista">
-                            <p>agregar a la lista</p>
-                            <i class="icon-agregar-lista icon-playlist_play"></i>
-                        </div>
-                    </div>
-                    <div class="description-content">
-                        <img src="images/image-profile.png" alt="" class="image-profile">
-                        <h1 class="tittle-content">Título de canción</h1>
-                        <h2 class="name-account-content">Autor</h2>
-                        <h2 class="views-content">20 M de vistas</h2>
-                        <h2 class="time-content">hace 11 meses</h2>
-                    </div>
-                    <i class="more-options-content icon-more-vertical"></i>
-                </div>
-                <div class="container-content">
-                    <div class="container-image-content">
-                        <img src="images/content-image.jpg" alt="" class="image-content">
-                        <p class="duration">1:01:14</p>
-                        <div class="ver-mas-tarde">
-                            <p>ver más tarde</p>
-                            <i class="icon-ver-mas-tarde icon-clock2"></i>
-                        </div>
-                        <div class="agregar-lista">
-                            <p>agregar a la lista</p>
-                            <i class="icon-agregar-lista icon-playlist_play"></i>
-                        </div>
-                    </div>
-                    <div class="description-content">
-                        <img src="images/image-profile.png" alt="" class="image-profile">
-                        <h1 class="tittle-content">Título de canción</h1>
-                        <h2 class="name-account-content">Autor</h2>
-                        <h2 class="views-content">20 M de vistas</h2>
-                        <h2 class="time-content">hace 11 meses</h2>
-                    </div>
-                    <i class="more-options-content icon-more-vertical"></i>
-                </div>
-                <div class="container-content">
-                    <div class="container-image-content">
-                        <img src="images/content-image.jpg" alt="" class="image-content">
-                        <p class="duration">1:01:14</p>
-                        <div class="ver-mas-tarde">
-                            <p>ver más tarde</p>
-                            <i class="icon-ver-mas-tarde icon-clock2"></i>
-                        </div>
-                        <div class="agregar-lista">
-                            <p>agregar a la lista</p>
-                            <i class="icon-agregar-lista icon-playlist_play"></i>
-                        </div>
-                    </div>
-                    <div class="description-content">
-                        <img src="images/image-profile.png" alt="" class="image-profile">
-                        <h1 class="tittle-content">Título de canción</h1>
-                        <h2 class="name-account-content">Autor</h2>
-                        <h2 class="views-content">20 M de vistas</h2>
-                        <h2 class="time-content">hace 11 meses</h2>
-                    </div>
-                    <i class="more-options-content icon-more-vertical"></i>
-                </div>
-                <div class="container-content">
-                    <div class="container-image-content">
-                        <img src="images/content-image.jpg" alt="" class="image-content">
-                        <p class="duration">1:01:14</p>
-                        <div class="ver-mas-tarde">
-                            <p>ver más tarde</p>
-                            <i class="icon-ver-mas-tarde icon-clock2"></i>
-                        </div>
-                        <div class="agregar-lista">
-                            <p>agregar a la lista</p>
-                            <i class="icon-agregar-lista icon-playlist_play"></i>
-                        </div>
-                    </div>
-                    <div class="description-content">
-                        <img src="images/image-profile.png" alt="" class="image-profile">
-                        <h1 class="tittle-content">Título de canción</h1>
-                        <h2 class="name-account-content">Autor</h2>
-                        <h2 class="views-content">20 M de vistas</h2>
-                        <h2 class="time-content">hace 11 meses</h2>
-                    </div>
-                    <i class="more-options-content icon-more-vertical"></i>
-                </div>
-                <div class="container-content">
-                    <div class="container-image-content">
-                        <img src="images/content-image.jpg" alt="" class="image-content">
-                        <p class="duration">1:01:14</p>
-                        <div class="ver-mas-tarde">
-                            <p>ver más tarde</p>
-                            <i class="icon-ver-mas-tarde icon-clock2"></i>
-                        </div>
-                        <div class="agregar-lista">
-                            <p>agregar a la lista</p>
-                            <i class="icon-agregar-lista icon-playlist_play"></i>
-                        </div>
-                    </div>
-                    <div class="description-content">
-                        <img src="images/image-profile.png" alt="" class="image-profile">
-                        <h1 class="tittle-content">Título de canción</h1>
-                        <h2 class="name-account-content">Autor</h2>
-                        <h2 class="views-content">20 M de vistas</h2>
-                        <h2 class="time-content">hace 11 meses</h2>
-                    </div>
-                    <i class="more-options-content icon-more-vertical"></i>
-                </div>
-                <div class="container-content">
-                    <div class="container-image-content">
-                        <img src="images/content-image.jpg" alt="" class="image-content">
-                        <p class="duration">1:01:14</p>
-                        <div class="ver-mas-tarde">
-                            <p>ver más tarde</p>
-                            <i class="icon-ver-mas-tarde icon-clock2"></i>
-                        </div>
-                        <div class="agregar-lista">
-                            <p>agregar a la lista</p>
-                            <i class="icon-agregar-lista icon-playlist_play"></i>
-                        </div>
-                    </div>
-                    <div class="description-content">
-                        <img src="images/image-profile.png" alt="" class="image-profile">
-                        <h1 class="tittle-content">Título de canción</h1>
-                        <h2 class="name-account-content">Autor</h2>
-                        <h2 class="views-content">20 M de vistas</h2>
-                        <h2 class="time-content">hace 11 meses</h2>
-                    </div>
-                    <i class="more-options-content icon-more-vertical"></i>
-                </div>
             </div>
             <div class="mix-content">
+                <div class="container-content">
+                    <div class="container-image-content">
+                        <img src="images/content-image.jpg" alt="" class="image-content">
+                        <div class="play-max">
+                            <p>50+</p>
+                            <i class="icon-stack"></i>
+                            <div class="reproduction">
+                                <i class="play-mix"></i>
+                                <p>Reproducir todos</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="description-content">
+                        <h1 class="tittle-content">Título de canción</h1>
+                        <h2 class="name-account-content">Autores</h2>
+                    </div>
+                    <i class="more-options-mix icon-more-vertical"></i>
+                </div>
+                <div class="container-content">
+                    <div class="container-image-content">
+                        <img src="images/content-image.jpg" alt="" class="image-content">
+                        <div class="play-max">
+                            <p>50+</p>
+                            <i class="icon-stack"></i>
+                            <div class="reproduction">
+                                <i class="play-mix"></i>
+                                <p>Reproducir todos</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="description-content">
+                        <h1 class="tittle-content">Título de canción</h1>
+                        <h2 class="name-account-content">Autores</h2>
+                    </div>
+                    <i class="more-options-mix icon-more-vertical"></i>
+                </div>
                 <div class="container-content">
                     <div class="container-image-content">
                         <img src="images/content-image.jpg" alt="" class="image-content">
