Se agregan sombras a los elementos al ponerse sobre ellos

--- a/index.html
+++ b/index.html
@@ -39,26 +39,36 @@
         </header>
         <!-- <div class="container-menus-left-content"> -->
             <div class="menu-left-small">
-                <a href="" class="left-small-item">
-                    <i class="icon-menu-left-small icon-home"></i>
-                    <p>Principal</p>
-                </a>
-                <a href="" class="left-small-item">
-                    <i class="icon-menu-left-small icon-fire"></i>
-                    <p>Tendencias</p>
-                </a>
-                <a href="" class="left-small-item">
-                    <i class="icon-menu-left-small icon-stack"></i>
-                    <p>Suscripciones</p>
-                </a>
-                <a href="" class="left-small-item">
-                    <i class="icon-menu-left-small icon-youtube-play"></i>
-                    <p>Originals</p>
-                </a>
-                <a href="" class="left-small-item">
-                    <i class="icon-menu-left-small icon-video_library"></i>
-                    <p>Bibioteca</p>
-                </a>
+                <div class="container-left-small-item">
+                    <a href="" class="left-small-item">
+                        <i class="icon-menu-left-small icon-home"></i>
+                        <p>Principal</p>
+                    </a>
+                </div>
+                <div class="container-left-small-item">
+                    <a href="" class="left-small-item">
+                        <i class="icon-menu-left-small icon-fire"></i>
+                        <p>Tendencias</p>
+                    </a>
+                </div>
+                <div class="container-left-small-item">
+                    <a href="" class="left-small-item">
+                        <i class="icon-menu-left-small icon-stack"></i>
+                        <p>Suscripciones</p>
+                    </a>
+                </div>
+                <div class="container-left-small-item">
+                    <a href="" class="left-small-item">
+                        <i class="icon-menu-left-small icon-youtube-play"></i>
+                        <p>Originals</p>
+                    </a>
+                </div>
+                <div class="container-left-small-item">
+                    <a href="" class="left-small-item">
+                        <i class="icon-menu-left-small icon-video_library"></i>
+                        <p>Bibioteca</p>
+                    </a>
+                </div>
             </div>
             <div class="menu-left">
                 <a href="" class="menu-left-item">
@@ -164,14 +174,18 @@
             </div>
         <!-- </div> -->
         <div class="menu-crear">
-            <a href="" class="menu-crear-item">
-                <i class="icon-menu-crear icon-film"></i>
-                <p>Subir video</p>
-            </a>
-            <a href="" class="menu-crear-item">
-                <i class="icon-menu-crear icon-feed"></i>
-                <p>Transmitir en vivo</p>
-            </a>
+            <div class="container-menu-crear-item">
+                <a href="" class="menu-crear-item">
+                    <i class="icon-menu-crear icon-film"></i>
+                    <p>Subir video</p>
+                </a>
+            </div>
+            <div class="container-menu-crear-item">
+                <a href="" class="menu-crear-item">
+                    <i class="icon-menu-crear icon-feed"></i>
+                    <p>Transmitir en vivo</p>
+                </a>
+            </div>
         </div>
         <div class="menu-apps">
             <a href="" class="menu-apps-item">
