Se organiza el contenido de video

--- a/index.html
+++ b/index.html
@@ -380,12 +380,16 @@
                         <img src="images/content-image.jpg" alt="" class="image-content">
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
-                            <p>ver más tarde</p>
-                            <i class="icon-ver-mas-tarde icon-clock2"></i>
+                            <p class="ver-mas-tarde-text">ver más tarde</p>
+                            <div class="icon-ver-mas-tarde-container">
+                                <i class="icon-ver-mas-tarde icon-clock2"></i>
+                            </div>
                         </div>
                         <div class="agregar-lista">
-                            <p>agregar a la lista</p>
-                            <i class="icon-agregar-lista icon-playlist_play"></i>
+                            <p class="agregar-lista-text">agregar a la lista</p>
+                            <div class="icon-agregar-lista-container">
+                                <i class="icon-agregar-lista icon-playlist_play"></i>
+                            </div>
                         </div>
                     </div>
                     <div class="description-content">
@@ -394,20 +398,24 @@
                         <h2 class="name-account-content">Autor</h2>
                         <h2 class="views-content">20 M de vistas</h2>
                         <h2 class="time-content">hace 11 meses</h2>
+                        <i class="more-options-content icon-more-vertical"></i>
                     </div>
-                    <i class="more-options-content icon-more-vertical"></i>
                 </div>
                 <div class="container-content">
                     <div class="container-image-content">
                         <img src="images/content-image.jpg" alt="" class="image-content">
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
-                            <p>ver más tarde</p>
-                            <i class="icon-ver-mas-tarde icon-clock2"></i>
+                            <p class="ver-mas-tarde-text">ver más tarde</p>
+                            <div class="icon-ver-mas-tarde-container">
+                                <i class="icon-ver-mas-tarde icon-clock2"></i>
+                            </div>
                         </div>
                         <div class="agregar-lista">
-                            <p>agregar a la lista</p>
-                            <i class="icon-agregar-lista icon-playlist_play"></i>
+                            <p class="agregar-lista-text">agregar a la lista</p>
+                            <div class="icon-agregar-lista-container">
+                                <i class="icon-agregar-lista icon-playlist_play"></i>
+                            </div>
                         </div>
                     </div>
                     <div class="description-content">
@@ -416,20 +424,24 @@
                         <h2 class="name-account-content">Autor</h2>
                         <h2 class="views-content">20 M de vistas</h2>
                         <h2 class="time-content">hace 11 meses</h2>
+                        <i class="more-options-content icon-more-vertical"></i>
                     </div>
-                    <i class="more-options-content icon-more-vertical"></i>
                 </div>
                 <div class="container-content">
                     <div class="container-image-content">
                         <img src="images/content-image.jpg" alt="" class="image-content">
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
-                            <p>ver más tarde</p>
-                            <i class="icon-ver-mas-tarde icon-clock2"></i>
+                            <p class="ver-mas-tarde-text">ver más tarde</p>
+                            <div class="icon-ver-mas-tarde-container">
+                                <i class="icon-ver-mas-tarde icon-clock2"></i>
+                            </div>
                         </div>
                         <div class="agregar-lista">
-                            <p>agregar a la lista</p>
-                            <i class="icon-agregar-lista icon-playlist_play"></i>
+                            <p class="agregar-lista-text">agregar a la lista</p>
+                            <div class="icon-agregar-lista-container">
+                                <i class="icon-agregar-lista icon-playlist_play"></i>
+                            </div>
                         </div>
                     </div>
                     <div class="description-content">
@@ -438,20 +450,24 @@
                         <h2 class="name-account-content">Autor</h2>
                         <h2 class="views-content">20 M de vistas</h2>
                         <h2 class="time-content">hace 11 meses</h2>
+                        <i class="more-options-content icon-more-vertical"></i>
                     </div>
-                    <i class="more-options-content icon-more-vertical"></i>
                 </div>
                 <div class="container-content">
                     <div class="container-image-content">
                         <img src="images/content-image.jpg" alt="" class="image-content">
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
-                            <p>ver más tarde</p>
-                            <i class="icon-ver-mas-tarde icon-clock2"></i>
+                            <p class="ver-mas-tarde-text">ver más tarde</p>
+                            <div class="icon-ver-mas-tarde-container">
+                                <i class="icon-ver-mas-tarde icon-clock2"></i>
+                            </div>
                         </div>
                         <div class="agregar-lista">
-                            <p>agregar a la lista</p>
-                            <i class="icon-agregar-lista icon-playlist_play"></i>
+                            <p class="agregar-lista-text">agregar a la lista</p>
+                            <div class="icon-agregar-lista-container">
+                                <i class="icon-agregar-lista icon-playlist_play"></i>
+                            </div>
                         </div>
                     </div>
                     <div class="description-content">
@@ -460,20 +476,24 @@
                         <h2 class="name-account-content">Autor</h2>
                         <h2 class="views-content">20 M de vistas</h2>
                         <h2 class="time-content">hace 11 meses</h2>
+                        <i class="more-options-content icon-more-vertical"></i>
                     </div>
-                    <i class="more-options-content icon-more-vertical"></i>
                 </div>
                 <div class="container-content">
                     <div class="container-image-content">
                         <img src="images/content-image.jpg" alt="" class="image-content">
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
-                            <p>ver más tarde</p>
-                            <i class="icon-ver-mas-tarde icon-clock2"></i>
+                            <p class="ver-mas-tarde-text">ver más tarde</p>
+                            <div class="icon-ver-mas-tarde-container">
+                                <i class="icon-ver-mas-tarde icon-clock2"></i>
+                            </div>
                         </div>
                         <div class="agregar-lista">
-                            <p>agregar a la lista</p>
-                            <i class="icon-agregar-lista icon-playlist_play"></i>
+                            <p class="agregar-lista-text">agregar a la lista</p>
+                            <div class="icon-agregar-lista-container">
+                                <i class="icon-agregar-lista icon-playlist_play"></i>
+                            </div>
                         </div>
                     </div>
                     <div class="description-content">
@@ -482,20 +502,24 @@
                         <h2 class="name-account-content">Autor</h2>
                         <h2 class="views-content">20 M de vistas</h2>
                         <h2 class="time-content">hace 11 meses</h2>
+                        <i class="more-options-content icon-more-vertical"></i>
                     </div>
-                    <i class="more-options-content icon-more-vertical"></i>
                 </div>
                 <div class="container-content">
                     <div class="container-image-content">
                         <img src="images/content-image.jpg" alt="" class="image-content">
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
-                            <p>ver más tarde</p>
-                            <i class="icon-ver-mas-tarde icon-clock2"></i>
+                            <p class="ver-mas-tarde-text">ver más tarde</p>
+                            <div class="icon-ver-mas-tarde-container">
+                                <i class="icon-ver-mas-tarde icon-clock2"></i>
+                            </div>
                         </div>
                         <div class="agregar-lista">
-                            <p>agregar a la lista</p>
-                            <i class="icon-agregar-lista icon-playlist_play"></i>
+                            <p class="agregar-lista-text">agregar a la lista</p>
+                            <div class="icon-agregar-lista-container">
+                                <i class="icon-agregar-lista icon-playlist_play"></i>
+                            </div>
                         </div>
                     </div>
                     <div class="description-content">
@@ -504,8 +528,8 @@
                         <h2 class="name-account-content">Autor</h2>
                         <h2 class="views-content">20 M de vistas</h2>
                         <h2 class="time-content">hace 11 meses</h2>
+                        <i class="more-options-content icon-more-vertical"></i>
                     </div>
-                    <i class="more-options-content icon-more-vertical"></i>
                 </div>
             </div>
             <div class="mix-content">
